--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ jdk: openjdk8
 sudo: required
 dist: trusty
 
+notifications:
+  irc:
+  - "irc.mozilla.org#vaani"
+
 install:
 - wget http://www-us.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.tar.gz
 - tar xzf apache-maven-3.3.9-bin.tar.gz
@@ -26,4 +30,3 @@ deploy:
   on:
     repo: mozilla/openhab-distro
     branch: master
-    tags: true
